[project]
name = "python-elasticsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch-dsl>=8.18.0",
    "elasticsearch[async]==8.7",
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "uvicorn[standard]>=0.34.2",
]
